--- a/leader-board.html
+++ b/leader-board.html
@@ -29,17 +29,63 @@
                 </div>
                 <div class="player">
                     <img src="img/players/player-4.png" alt="">
-                    <h3>John Smith</h3>
+                    <h3>Shajedul Karim</h3>
                 </div>
                 <div class="player">
                     <img src="img/players/player-5.png" alt="">
-                    <h3>John Smith</h3>
+                    <h3>Maruf Ahmed</h3>
                 </div>
                 <div class="player">
                     <img src="img/players/player-6.png" alt="">
-                    <h3>John Smith</h3>
+                    <h3>Mujahid</h3>
                 </div>
             </div>
+        </section>
+        <section>
+            <h1 class="section-title">Top Blog</h1>
+            <div class="blogs">
+                <article class="blog">
+                    <div class="thumbnail">
+                        <img src="img/blogs/blog-1.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3>13 of My Favorite UI/UX Goodies</h3>
+                        <p>By <a href="#">Danny sapio</a>
+                        </p>
+                    </div>
+                </article>
+                <article class="blog">
+                    <div class="thumbnail">
+                        <img src="img/blogs/blog-2.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3>13 of My Favorite UI/UX Goodies</h3>
+                        <p>By <a href="#">Danny sapio</a>
+                        </p>
+                    </div>
+                </article>
+                <article class="blog">
+                    <div class="thumbnail">
+                        <img src="img/blogs/blog-3.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3>13 of My Favorite UI/UX Goodies</h3>
+                        <p>By <a href="#">Danny sapio</a>
+                        </p>
+                    </div>
+                </article>
+                <article class="blog">
+                    <div class="thumbnail">
+                        <img src="img/blogs/blog-4.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3>13 of My Favorite UI/UX Goodies</h3>
+                        <p>By <a href="#">Danny sapio</a>
+                        </p>
+                    </div>
+                </article>
+            </div>
+            
         </section>
     </main>
 </body>
