--- a/leader-board.html
+++ b/leader-board.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader Board</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/all.min.css">
 </head>
+
 <body>
     <header>
 
@@ -85,8 +88,74 @@
                     </div>
                 </article>
             </div>
-            
+
+        </section>
+        <section>
+            <h1 class="section-title">Latest Courses</h1>
+            <div class="courses">
+                <div class="course">
+                    <img src="img/courses/course-1.png" alt="">
+                    <div class="course-detail">
+                        <h3>React - The Complete Guide 2022</h3>
+                        <p><a href="#">Reed Krakoff.</a></p>
+                        <div class="course-info">
+                            <div class="ratings">
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star unfilled"></i>
+                            </div>
+                            <div class="duration">
+                                <i class="fa-regular fa-clock"></i>
+                                <span>1:30hr</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <img src="img/courses/course-2.png" alt="">
+                    <div class="course-detail">
+                        <h3>React - The Complete Guide 2022</h3>
+                        <p><a href="#">Reed Krakoff.</a></p>
+                        <div class="course-info">
+                            <div class="ratings">
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star unfilled"></i>
+                            </div>
+                            <div class="duration">
+                                <i class="fa-regular fa-clock"></i>
+                                <span>1:30hr</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <img src="img/courses/course-3.png" alt="">
+                    <div class="course-detail">
+                        <h3>React - The Complete Guide 2022</h3>
+                        <p><a href="#">Reed Krakoff.</a></p>
+                        <div class="course-info">
+                            <div class="ratings">
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star unfilled"></i>
+                            </div>
+                            <div class="duration">
+                                <i class="fa-regular fa-clock"></i>
+                                <span>1:30hr</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 </body>
+
 </html>
